# origin-signal

./: .env.example  .gitignore  README.md  dev-start.sh  docker-compose.yml
.claude/skills/run-browser/: SKILL.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: _llm_json.py  climate_agent.py  executive_agent.py  gap_agent.py  logistics_agent.py  market_agent.py  regulatory_agent.py  tariff_agent.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: mongodb.py
backend/app/rag/: document_processor.py  ingest.py  vector_store.py
backend/app/utils/: excel_generator.py  pdf_generator.py
backend/data/import_docs/: BRAZIL_IMPORT_GUIDE.md  CHINA_EXPORT_GUIDE.md  LATAM_EXPORT_GUIDE.md  USA_EXPORT_GUIDE.md
backend/data/tariff_docs/: BRAZIL_TARIFF_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: AuditPathScreen.tsx  ComparatorScreen.tsx  DashboardScreen.tsx  GlobalHeatMap.tsx  HexMap.tsx  HistoryScreen.tsx  LandingScreen.tsx  LangToggle.tsx  OptimizationScreen.tsx  ProcessingScreen.tsx
frontend/src/components/ui/: BackButton.tsx  BriefingBlock.tsx  Eyebrow.tsx  HexDivider.tsx  Logo.tsx  Panel.tsx  PillChip.tsx  PipelineStrip.tsx  ProgressMeter.tsx  RevealSection.tsx  ScreenHeader.tsx
frontend/src/context/: LanguageContext.tsx
frontend/src/i18n/: translations.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
