[tool.poetry]
name = "originsignal"
version = "0.1.0"
description = "Trade Risk Intelligence Platform"
authors = ["Beatriz"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
crewai = "^0.51.0"
anthropic = "^0.28.0"
motor = "^3.4.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
chromadb = "^0.4.24"
langchain = "^0.2.0"
langchain-anthropic = "^0.1.0"
pypdf2 = "^3.0.0"
beautifulsoup4 = "^4.12.0"
feedparser = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"